--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,8 @@ swagger-ui-bundle>=0.0.2
 python_dateutil>=2.6.0
 setuptools>=21.0.0
 python-dotenv==1.0.0
+scikit-learn==1.3.0
+nltk==3.8.1
+tinydb==4.7.1
+pytz==2023.3
+joblib==1.3.2
